k8s/secret-provider-class.yaml
##############################################################################
# k8s/namespace.yaml
# Dedicated namespace for all Zuri Market resources
##############################################################################
apiVersion: v1
kind: Namespace
metadata:
  name: zurimarket
